<?xml version="1.0"?>
<package format="2">
  <name>roas_cartographer</name>
  <version>0.0.0</version>
  <description>
    For Cartographer SLAM
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer> 
  <license>BSD</license> 

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cartographer_ros</depend>
  <depend>move_base</depend>

</package>